--- a/WSPay.Net/WSPay.Net.csproj
+++ b/WSPay.Net/WSPay.Net.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.0" />
     </ItemGroup>
 
 </Project>
