--- a/WSPay.Net/WSPay.Net.csproj
+++ b/WSPay.Net/WSPay.Net.csproj
@@ -1,7 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <Title>Client </Title>
+        <Authors>Dobartek</Authors>
+        <Description>WSPay.Net is a async client for WSPay API.</Description>
+        <PackageProjectUrl>https://github.com/Dobartek/wspay-dotnet</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/Dobartek/wspay-dotnet</RepositoryUrl>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
