--- a/WSPay.Net/WSPay.Net.csproj
+++ b/WSPay.Net/WSPay.Net.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>netstandard2.0</TargetFramework>
         <Title>Client </Title>
         <Authors>Dobartek</Authors>
-        <Description>WSPay.Net is a async client for WSPay API.</Description>
+        <Description>WSPay.Net is an async client for WSPay API.</Description>
         <PackageProjectUrl>https://github.com/Dobartek/wspay-dotnet</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Dobartek/wspay-dotnet</RepositoryUrl>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
