refactor remaing of status update requests

--- a/WSPay.Net/WSPay.Net.csproj
+++ b/WSPay.Net/WSPay.Net.csproj
@@ -8,6 +8,7 @@
         <PackageProjectUrl>https://github.com/Dobartek/wspay-dotnet</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Dobartek/wspay-dotnet</RepositoryUrl>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageVersion>1.0.1</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
