--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -9,10 +9,14 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install libssl
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libssl1.1
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
